src/app/profile/profile-content/profile-content.component.css
.profile-options-btn {
  height: 50px;
  top: 1px;
  border-radius: 0;
  padding: 6px 0;
  box-sizing: border-box;
  transition: color .3s ease-out;
}

.profile-options-btn:hover {
  color: var(--color-secondary);
}

.profile-options-btn::after {
  content: '';
  display: block;
  margin: 14px auto 0;
  height: 5px;
  width: 0;
  background-color: transparent;
  transition: .3s;
}

.profile-options-btn:hover::after {
  width: 100%;
  background-color: var(--color-secondary);
}

.active-tab {
  border-bottom: 5px solid var(--color-secondary);
  transition: .2s ease-out;
}

/* =================== */
/* || Tab Scrolling || */
/* =================== */

.scroll-control {
  justify-content: flex-end;
}

@media screen and (min-width: 768px) {
  .scroll-control {
    display: none;
  }
}

.tab-container {
  height: 50px;
  overflow: hidden;
  text-align: center;
}

#profileTabs {
  white-space: nowrap;
  overflow-x: scroll;
  scroll-behavior: smooth;
}

.tab {
  width: 100px;
}

